fixed asList error